@@ -1,5 +1,11 @@
 2011-06-23  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/kern/emu/hostdisk.c (grub_util_biosdisk_is_floppy): Close
+	file after stat.
+	Reported by: David Volgyes <dvolgyes>.
+
+2011-06-23  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* util/raid.c (grub_util_raid_getmembers): Close fd before returning.
 
 	Reported by: David Volgyes <dvolgyes>.
